--- a/src/locale/zh-CN.json
+++ b/src/locale/zh-CN.json
@@ -10,6 +10,8 @@
   "menu.user.role.user": "普通用户",
   "menu.personal": "个人",
   "menu.personal.settings": "个人设置",
+  "menu.yggdrasil": "Yggdrasil",
+  "menu.yggdrasil.services": "远程树",
   "navbar.logout": "退出登录",
   "settings.title": "页面配置",
   "settings.themeColor": "主题色",
@@ -28,6 +30,8 @@
   "settings.close": "关闭",
   "settings.color.tooltip": "根据主题颜色生成的 10 个梯度色（将配置复制到项目中，主题色才能对亮色 / 暗黑模式同时生效）",
   "personal.settings.security": "安全设置",
+  "yggdrasil.service.is-enabled": "是否开启",
+  "yggdrasil.service.comment": "备注",
   "reset-password": "重置密码",
   "reset-password.old": "原密码",
   "reset-password.new": "新密码",
@@ -39,6 +43,11 @@
   "message.allRead": "全部已读",
   "message.seeMore": "查看更多",
   "message.empty": "清空",
+  "message.edit": "修改",
+  "message.create-new": "新建",
+  "message.delete": "删除",
+  "message.delete.confirm-to-delete": "确认删除",
+  "message.delete.unable-to-recover": "一旦确认删除，将无法恢复。",
   "message.empty.tips": "暂无内容",
   "message.error.apiError": "发生错误",
   "navbar.search.placeholder": "输入内容查询"
