--- a/src/locale/zh-CN.json
+++ b/src/locale/zh-CN.json
@@ -12,6 +12,7 @@
   "menu.personal.settings": "个人设置",
   "menu.yggdrasil": "Yggdrasil",
   "menu.yggdrasil.services": "远程树",
+  "menu.yggdrasil.players": "玩家信息",
   "navbar.logout": "退出登录",
   "settings.title": "页面配置",
   "settings.themeColor": "主题色",
@@ -32,6 +33,14 @@
   "personal.settings.security": "安全设置",
   "yggdrasil.service.is-enabled": "是否开启",
   "yggdrasil.service.comment": "备注",
+  "yggdrasil.player.declared-yggdrasil": "来源树",
+  "yggdrasil.player.upstream-name": "来源名称",
+  "yggdrasil.player.upstream-uuid": "源 UUID",
+  "yggdrasil.player.downstream-name": "下发名称",
+  "yggdrasil.player.downstream-uuid": "下发 UUID",
+  "yggdrasil.player.always-permit": "准许通行",
+  "yggdrasil.player.sync": "主动同步",
+  "yggdrasil.prohibit-mode.tooltip": "当服务器启动「限制模式」后，YggdrasilGateway 将不会再存储新的玩家信息，同时只有「准许通行」的玩家可以通过验证。",
   "reset-password": "重置密码",
   "reset-password.old": "原密码",
   "reset-password.new": "新密码",
@@ -45,6 +54,7 @@
   "message.empty": "清空",
   "message.edit": "修改",
   "message.create-new": "新建",
+  "message.search": "搜索",
   "message.delete": "删除",
   "message.delete.confirm-to-delete": "确认删除",
   "message.delete.unable-to-recover": "一旦确认删除，将无法恢复。",
