Server settings page

--- a/src/locale/zh-CN.json
+++ b/src/locale/zh-CN.json
@@ -13,6 +13,7 @@
   "menu.yggdrasil": "Yggdrasil",
   "menu.yggdrasil.services": "远程树",
   "menu.yggdrasil.players": "玩家信息",
+  "menu.yggdrasil.settings": "鉴权设置",
   "navbar.logout": "退出登录",
   "settings.title": "页面配置",
   "settings.themeColor": "主题色",
@@ -40,7 +41,29 @@
   "yggdrasil.player.downstream-uuid": "下发 UUID",
   "yggdrasil.player.always-permit": "准许通行",
   "yggdrasil.player.sync": "主动同步",
-  "yggdrasil.prohibit-mode.tooltip": "当服务器启动「限制模式」后，YggdrasilGateway 将不会再存储新的玩家信息，同时只有「准许通行」的玩家可以通过验证。",
+  "yggdrasil.settings.auto-resolve-name": "自动解决冲突名字",
+  "yggdrasil.settings.auto-resolve-name.tooltip": "当启动此模式时，如果一位新加入的玩家与已有的玩家名冲突，则自动为其添加后缀；当此模式禁用时，该玩家不被允许加入服务器",
+  "yggdrasil.settings.auto-resolve-uuid": "自动解决冲突 UUID",
+  "yggdrasil.settings.auto-resolve-uuid.tooltip": "当启动此模式时，如果一位新加入的玩家与已有的玩家的 UUID 冲突，则自动重新分配 UUID；当此模式禁用时，该玩家不被允许加入服务器",
+  "yggdrasil.settings.enchanted-error-rejection": "增强拒绝模式",
+  "yggdrasil.settings.enchanted-error-rejection.tooltip": "当启动此模式时，为该玩家提示更友好的消息；当禁用此模式时，玩家将以「鉴权服务器宕机」原因被拒绝连接。如果出现兼容性问题，请关闭此选项。",
+  "yggdrasil.settings.prohibit-mode": "限制模式",
+  "yggdrasil.settings.prohibit-mode.tooltip": "当服务器启动「限制模式」后，YggdrasilGateway 将不会再存储新的玩家信息，同时只有「准许通行」的玩家可以通过验证。",
+  "yggdrasil.settings.process-mode": "鉴权模式",
+  "yggdrasil.settings.process-mode.tooltip": "将鼠标移动到选项上查看帮助",
+  "yggdrasil.settings.process-mode.FIRST_SUCCESS": "首个成功",
+  "yggdrasil.settings.process-mode.FIRST_SUCCESS.tooltip": "直接使用第一个响应的远程树作为玩家远程鉴权结果",
+  "yggdrasil.settings.process-mode.ERROR_SKIP": "忽略错误",
+  "yggdrasil.settings.process-mode.ERROR_SKIP.tooltip": "与严格模式一样，唯一的区别是当远程树返回错误时将会忽略错误的发生",
+  "yggdrasil.settings.process-mode.COMPLETE_TEST": "严格模式",
+  "yggdrasil.settings.process-mode.COMPLETE_TEST.tooltip": "等待所有远程树响应并处理；如果有任何一个远程树发生错误，此次登录鉴权失败；如果有多个远程树鉴权成功，此次登录鉴权失败。",
+  "yggdrasil.settings.delivered-public-key": "代理树公钥",
+  "yggdrasil.settings.delivered-public-key.tooltip": "此公钥将下发给服务器并用于服务器签名验证；如果运行服务器的版本为 1.19.1 之前的版本，此配置可以忽略，否则此选项应该设置为主远程树的公钥",
+  "yggdrasil.settings.delivered-public-key.sync": "从其他站点同步",
+  "yggdrasil.settings.delivered-public-key.sync.input": "请输入其他站点的 Yggdrasil API 根地址",
+  "yggdrasil.settings.delivered-public-key.sync.incorrect-content-type": "无效的站点：提供的站点返回了无效的数据类型",
+  "yggdrasil.settings.delivered-public-key.sync.incorrect-signaturePublickey": "无效的站点：提供的站点没有返回可用公钥",
+  "yggdrasil.settings.delivered-public-key.sync.confirm-title": "确认使用此公钥",
   "reset-password": "重置密码",
   "reset-password.old": "原密码",
   "reset-password.new": "新密码",
@@ -55,6 +78,8 @@
   "message.edit": "修改",
   "message.create-new": "新建",
   "message.search": "搜索",
+  "message.submit": "提交",
+  "message.submit.success": "成功提交",
   "message.delete": "删除",
   "message.delete.confirm-to-delete": "确认删除",
   "message.delete.unable-to-recover": "一旦确认删除，将无法恢复。",
