friendly rejection text

--- a/src/locale/zh-CN.json
+++ b/src/locale/zh-CN.json
@@ -14,6 +14,7 @@
   "menu.yggdrasil.services": "远程树",
   "menu.yggdrasil.players": "玩家信息",
   "menu.yggdrasil.settings": "鉴权设置",
+  "menu.messages-edit": "消息段编辑",
   "navbar.logout": "退出登录",
   "settings.title": "页面配置",
   "settings.themeColor": "主题色",
@@ -69,6 +70,12 @@
   "reset-password.new": "新密码",
   "reset-password.confirm": "确认密码",
   "reset-password.old-password-incorrect": "原始密码错误",
+  "message-edit.key": "关键字",
+  "message-edit.val": "最终值",
+  "message-edit.def": "默认值",
+  "message-edit.reset": "重置为默认值",
+  "message-edit.resetted": "已重置为默认值",
+  "message-edit.submitted": "已修改",
   "message.tab.title.message": "消息",
   "message.tab.title.notice": "通知",
   "message.tab.title.todo": "待办",
