--- a/src/locale/zh-CN.json
+++ b/src/locale/zh-CN.json
@@ -76,6 +76,7 @@
   "message-edit.val": "最终值",
   "message-edit.def": "默认值",
   "message-edit.reset": "重置为默认值",
+  "message-edit.reset-confirm": "确认重置回默认值?",
   "message-edit.resetted": "已重置为默认值",
   "message-edit.submitted": "已修改",
   "message.tab.title.message": "消息",
