code snippet web interface

--- a/src/locale/zh-CN.json
+++ b/src/locale/zh-CN.json
@@ -15,6 +15,7 @@
   "menu.yggdrasil.players": "玩家信息",
   "menu.yggdrasil.settings": "鉴权设置",
   "menu.messages-edit": "消息段编辑",
+  "menu.code-snippet": "代码片段",
   "navbar.logout": "退出登录",
   "settings.title": "页面配置",
   "settings.themeColor": "主题色",
@@ -79,6 +80,13 @@
   "message-edit.reset-confirm": "确认重置回默认值?",
   "message-edit.resetted": "已重置为默认值",
   "message-edit.submitted": "已修改",
+  "code-snippet.key": "片段索引",
+  "code-snippet.name": "片段名",
+  "code-snippet.defaultCode": "默认代码",
+  "code-snippet.currentCode": "当前代码",
+  "code-snippet.reset": "重置为默认行为",
+  "code-snippet.reset-confirm": "确认重置回默认行为?",
+  "code-snippet.resetted": "已重置为默认行为",
   "message.tab.title.message": "消息",
   "message.tab.title.notice": "通知",
   "message.tab.title.todo": "待办",
