Exporting & Importing data

--- a/src/locale/zh-CN.json
+++ b/src/locale/zh-CN.json
@@ -45,6 +45,9 @@
   "yggdrasil.player.downstream-uuid": "下发 UUID",
   "yggdrasil.player.always-permit": "准许通行",
   "yggdrasil.player.sync": "主动同步",
+  "yggdrasil.player.export": "导出数据",
+  "yggdrasil.player.import": "导入数据",
+  "yggdrasil.player.import-override": "全量覆盖",
   "yggdrasil.settings.auto-resolve-name": "自动解决冲突名字",
   "yggdrasil.settings.auto-resolve-name.tooltip": "当启动此模式时，如果一位新加入的玩家与已有的玩家名冲突，则自动为其添加后缀；当此模式禁用时，该玩家不被允许加入服务器",
   "yggdrasil.settings.auto-resolve-uuid": "自动解决冲突 UUID",
